--- a/src/Aadev.ConditionsInterpreter.csproj
+++ b/src/Aadev.ConditionsInterpreter.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+	<TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
 	<RootNamespace>Aadev.ConditionsInterpreter</RootNamespace>
 	<PackageId>Aadev.ConditionsInterpreter</PackageId>
 	<Authors>aAndrzej-dev</Authors>
@@ -9,15 +9,14 @@
 	<Nullable>enable</Nullable>
 	<AssemblyName>Aadev.ConditionsInterpreter</AssemblyName>
 	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-	<Version>1.0.0-beta3</Version>
+	<Version>1.0.0-beta4</Version>
 	<Deterministic>True</Deterministic>
 	<DebugType>none</DebugType>
 	<Copyright>Copyright © aAndrzej-dev 2022</Copyright>
 	<PackageProjectUrl>https://github.com/aAndrzej-dev/Aadev.ConditionsInterpreter</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/aAndrzej-dev/Aadev.ConditionsInterpreter</RepositoryUrl>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	<PackageReleaseNotes>Renamed class form 'ConditionsInterpreter' to 'ConditionInterpreter'
-Bug fixes and performance improvements</PackageReleaseNotes>
+	<PackageReleaseNotes>Bug fixes and performance improvements</PackageReleaseNotes>
   </PropertyGroup>
 
 
